[BUG]34549:Switch Account dropdown list arrow not centered

--- a/apps/Admin/index.scss
+++ b/apps/Admin/index.scss
@@ -675,6 +675,9 @@ body.swal2-shown:not(.swal2-no-backdrop):not(.swal2-toast-shown) {
       color: #6e6e6e;
     }
   }
+  .adminTitleBar  span.k-icon.k-i-arrow-s{
+  line-height: 2;
+  }
 
   .custom-file-container__custom-file {
     width: 85% !important;
